# alertmesh-control

./: .gitignore  .pre-commit-config.yaml  LICENSE  docker-compose.yml  pyproject.toml
apps/api_keys/: admin.py  apps.py  models.py  serializers.py  views.py
apps/api_keys/migrations/: 0001_initial.py
apps/auth/: urls.py
apps/delivery_logs/: admin.py  apps.py  models.py
apps/delivery_logs/migrations/: 0001_initial.py
apps/recipients/: admin.py  apps.py  models.py  serializers.py  views.py
apps/recipients/migrations/: 0001_initial.py
apps/rules/: admin.py  apps.py  models.py  serializers.py  views.py
apps/rules/migrations/: 0001_initial.py
config/: api_router.py  settings.py  urls.py
