[project]
name = "alertmesh-control"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.3",
    "django-filter>=25.2",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "psycopg-binary>=3.3.3",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "django-stubs>=5.2.9",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "ruff>=0.15.5",
]

[tool.ruff]
line-length = 100
target-version = "py312"

lint.select = [
    "E",
    "F",
    "I",
    "UP",
]

lint.ignore = [
    "E501"
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]

strict = false
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "config.settings"
